crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '1 2'::tsvector;"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    TypeCast@7..22
      AConst@7..12
        Sconst@7..12 "'1 2'"
      Typecast@12..14 "::"
      TypeName@14..22
        Ident@14..22 "tsvector"
  Ascii59@22..23 ";"

