crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a' > 'b & c'::tsquery as \"false\";"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..29
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Ascii62@11..12 ">"
      Whitespace@12..13 " "
      TypeCast@13..29
        AConst@13..20
          Sconst@13..20 "'b & c'"
        Typecast@20..22 "::"
        TypeName@22..29
          Ident@22..29 "tsquery"
    Whitespace@29..30 " "
    As@30..32 "as"
    Whitespace@32..33 " "
    Ident@33..40 "\"false\""
  Ascii59@40..41 ";"

