crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@66.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a | f' < 'b & c'::tsquery as \"false\";"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..33
      AConst@7..14
        Sconst@7..14 "'a | f'"
      Whitespace@14..15 " "
      Ascii60@15..16 "<"
      Whitespace@16..17 " "
      TypeCast@17..33
        AConst@17..24
          Sconst@17..24 "'b & c'"
        Typecast@24..26 "::"
        TypeName@26..33
          Ident@26..33 "tsquery"
    Whitespace@33..34 " "
    As@34..36 "as"
    Whitespace@36..37 " "
    Ident@37..44 "\"false\""
  Ascii59@44..45 ";"

