crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numnode( 'new & york'::tsquery );"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..14 "numnode"
      Ascii40@14..15 "("
      Whitespace@15..16 " "
      TypeCast@16..37
        AConst@16..28
          Sconst@16..28 "'new & york'"
        Typecast@28..30 "::"
        TypeName@30..37
          Ident@30..37 "tsquery"
  Whitespace@37..38 " "
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

