crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@71.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT numnode( 'new & york | qwery'::tsquery );"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..14 "numnode"
      Ascii40@14..15 "("
      Whitespace@15..16 " "
      TypeCast@16..45
        AConst@16..36
          Sconst@16..36 "'new & york | qwery'"
        Typecast@36..38 "::"
        TypeName@38..45
          Ident@38..45 "tsquery"
  Whitespace@45..46 " "
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

